// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemHeader renders with a package score 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
    <div class="pb-3 pr-6 pt-6">
      <div class="duration-250 after:duration-250 relative z-[1] flex cursor-default flex-row gap-3 self-start transition-colors after:absolute after:inset-0 after:-left-[0.5rem] after:-top-[0.5rem] after:z-[-1] after:h-[calc(100%+1rem)] after:w-[calc(100%+1rem)] after:rounded-sm after:transition-all after:content-[''] hover:after:bg-neutral-100 dark:hover:after:bg-neutral-800">
        <gui-progress-circle
          value="80"
          variant="success"
          strokewidth="5"
          classname="size-9"
        >
          <p
            class="font-mono text-xs font-medium tabular-nums"
            style="color: oklch(0.696 0.17 162.48);"
          >
            80
          </p>
        </gui-progress-circle>
        <div class="flex flex-col">
          <p class="text-sm font-semibold text-neutral-600 dark:text-neutral-300">
            Package Score
          </p>
          <p class="font-mono text-xs font-medium tabular-nums text-neutral-400">
            80/100
          </p>
        </div>
      </div>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
  </div>
</div>

`;

exports[`ItemHeader renders with a version information 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
            <span class="ml-2">
              abc123 • 2 years ago
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
    <gui-data-badge
      value="123.5K"
      content="Downloads last week"
    >
    </gui-data-badge>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
    <gui-scroll-area classname="relative overflow-hidden border-b-[1px] border-muted py-3 w-full">
      <div class="absolute right-0 top-0 z-[100] h-full w-[24px] bg-card blur-sm">
      </div>
      <div class="absolute -right-2 top-0 z-[101] h-full w-[24px] bg-card">
      </div>
      <div class="absolute left-0 top-0 z-[100] h-full w-[24px] bg-card blur-sm">
      </div>
      <div class="absolute -left-2 top-0 z-[101] h-full w-[24px] bg-card">
      </div>
      <div class="flex w-max gap-2 overflow-x-hidden px-6">
        <gui-data-badge
          icon="gui-download-icon"
          value="121 KB"
          content="Install size"
        >
        </gui-data-badge>
        <gui-data-badge
          icon="gui-package-icon"
          content="Tarball"
          tooltip="[object Object]"
          copytoclipboard="[object Object]"
        >
        </gui-data-badge>
        <gui-data-badge
          value="abc123"
          content="Integrity"
          tooltip="[object Object]"
          copytoclipboard="[object Object]"
        >
        </gui-data-badge>
      </div>
      <gui-scroll-bar
        classname="z-[102]"
        orientation="horizontal"
      >
      </gui-scroll-bar>
    </gui-scroll-area>
  </div>
</div>

`;

exports[`ItemHeader renders with custom registry item 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <gui-data-badge
              variant="mono"
              content="custom:item@1.0.0"
              tooltip="[object Object]"
            >
            </gui-data-badge>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
  </div>
</div>

`;

exports[`ItemHeader renders with default git host item 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <gui-data-badge
              variant="mono"
              content="git:github:a/b"
            >
            </gui-data-badge>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
  </div>
</div>

`;

exports[`ItemHeader renders with default item 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
  </div>
</div>

`;

exports[`ItemHeader renders with insights 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
  </div>
</div>

`;

exports[`ItemHeader renders with scoped registry item 1`] = `

<div
  class="flex flex-col divide-y-[1px] divide-muted pb-3"
  style="opacity: 0;"
>
  <div class="flex w-full justify-between">
    <div class="flex gap-4 overflow-hidden pb-3 pl-6 pt-6">
      <gui-avatar classname="aspect-square size-[3.75rem]">
        <gui-avatar-image
          classname="aspect-square size-[3.75rem] rounded-md border-[1px] bg-secondary object-cover"
          src="https://example.com/favicon.png"
          alt="Example Favicon"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex aspect-square size-[3.75rem] h-full w-full items-center justify-center rounded-md border-[1px]">
          <div class="h-full w-full rounded-md bg-gradient-to-t from-neutral-200 to-neutral-400 dark:from-neutral-500 dark:to-neutral-800">
          </div>
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-scroll-area classname="w-full overflow-x-scroll">
        <div class="flex h-full w-full flex-col justify-between">
          <div class="flex w-full flex-col gap-0.5">
            <div class="flex items-center gap-2">
              <h1 class="w-fit max-w-full cursor-default align-baseline text-lg font-medium">
                item
                <span class="ml-2 font-courier text-sm text-muted-foreground">
                  1.0.0
                </span>
              </h1>
              <gui-tooltip-provider>
                <gui-tooltip delayduration="150">
                  <gui-tooltip-trigger classname="flex items-center justify-center">
                    <div class="cursor-default rounded-sm border-[1px] border-green-600 bg-green-400/30 p-0.5 transition-colors duration-150 hover:bg-green-400/40 dark:border-green-500 dark:bg-green-500/30 dark:hover:bg-green-500/40">
                      <gui-arrow-big-up-dash-icon
                        classname="text-green-600 dark:text-green-500"
                        size="16"
                      >
                      </gui-arrow-big-up-dash-icon>
                    </div>
                  </gui-tooltip-trigger>
                  <gui-tooltip-content>
                    Newer versions available
                  </gui-tooltip-content>
                </gui-tooltip>
              </gui-tooltip-provider>
            </div>
            <gui-data-badge
              variant="mono"
              content="item@1.0.0"
              tooltip="[object Object]"
            >
            </gui-data-badge>
          </div>
        </div>
        <gui-scroll-bar orientation="horizontal">
        </gui-scroll-bar>
      </gui-scroll-area>
    </div>
  </div>
  <div class="flex w-full items-center justify-between px-6 py-2 empty:hidden">
    <div class="flex h-[31.508px] items-center gap-2">
      <gui-avatar>
        <gui-avatar-image
          classname="size-5 rounded-sm outline outline-[1px] outline-border"
          src="https://example.com/avatar.png"
          alt="John Doe"
        >
        </gui-avatar-image>
        <gui-avatar-fallback classname="flex size-5 items-center justify-center rounded-sm bg-secondary bg-gradient-to-t from-neutral-100 to-neutral-400 p-0.5 outline outline-[1px] outline-border dark:from-neutral-500 dark:to-neutral-800">
        </gui-avatar-fallback>
      </gui-avatar>
      <gui-tooltip-provider>
        <gui-tooltip>
          <gui-tooltip-trigger classname="text-baseline cursor-default text-xs font-medium text-muted-foreground">
            Published by:
            <span class="text-foreground">
              John Doe
            </span>
          </gui-tooltip-trigger>
          <gui-tooltip-content align="start">
            John Doe john@example.com
          </gui-tooltip-content>
        </gui-tooltip>
      </gui-tooltip-provider>
    </div>
  </div>
  <div class="flex w-full divide-x-[1px] divide-muted empty:hidden">
  </div>
</div>

`;
